# slack-monitor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.toml.example  pyproject.toml
src/slack_monitor/: __init__.py  analyzer.py  buffer.py  config.py  formatter.py  llm.py  main.py  models.py  prompts.py  reader.py  tui.py
tests/: conftest.py  test_buffer.py  test_config.py  test_llm.py  test_models.py  test_prompts.py  test_reader.py
tests/fixtures/: sample_messages.json
