[project]
name = "slack-monitor"
version = "0.2.1"
description = "Real-time Slack channel summarizer powered by a local or cloud LLM"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
]

[project.scripts]
slack-monitor = "slack_monitor.main:main"
slack-monitor-tui = "slack_monitor.main:tui_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_monitor"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
